force-app/main/default/objects/Nivel_Economico__c/Nivel_Economico__c.object-meta.xml
<CustomObject>
    <description>Nível Econômico</description>
    <label>Nível Econômico</label>
    <nameField>
        <label>Nome Negócio Nível Econômico</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nível Econômico</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>