force-app/main/default/objects/Nivel_Economico__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nome da conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Nível Econômico</relationshipLabel>
    <relationshipName>Niveis_Economicos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>