force-app/main/default/objects/Nivel_Economico__c/fields/Data_Fechamento__c.field-meta.xml
<CustomField>
    <fullName>Data_Fechamento__c</fullName>
    <label>Data Fechamento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>