force-app/main/default/objects/Nivel_Economico__c/fields/Funil_Nivel_Economico__c.field-meta.xml
<CustomField>
    <fullName>Funil_Nivel_Economico__c</fullName>
    <label>Funil Nível Econômico</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitação</fullName>
                <default>true</default>
                <label>Solicitação</label>
            </value>
            <value>
                <fullName>Negociação</fullName>
            </value>
            <value>
                <fullName>Formalização</fullName>
            </value>
            <value>
                <fullName>Fechamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>