force-app/main/default/objects/Nivel_Economico__c/fields/Observa_o__c.field-meta.xml
<CustomField>
    <fullName>Observa_o__c</fullName>
    <label>Observação</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>