force-app/main/default/objects/Nivel_Economico__c/fields/valor__c.field-meta.xml
<CustomField>
    <fullName>valor__c</fullName>
    <label>Valor</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>