force-app/main/default/objects/Nivel_Economico__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Data_Fechamento__c</columns>
    <columns>valor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>